hphp/hack/test/full_fidelity/cases/coeffects/effect_encapsulation_parse_error.php
<?hh
<<file:__EnableUnstableFeatures('context_alias_declaration')>>

newctx X as [a] = [b];

newtype Y as [a] = [b]; // error
